dev/ingress.yaml
#test
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
   kubernetes.io/ingress.class: istio
  name: ingress
  namespace: istio-system
spec:
  rules:
  - host: testapp.cloudautomate.in
    http:
      paths:
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
