dev/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-vs
spec:
  hosts:
  - testapp.cloudautomate.in
  gateways:
  - gateway-internal
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: hello-app.raja-deployment
        port:
          number: 8080
